--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <h2>Natural History Museum</h2> 
+        <h2>Natural History Museum</h2>
         <h1>Dinosaurs</h1>
         <h3>How do you compare?</h3>
     </header>
@@ -35,7 +35,9 @@
                 <option>Omnivor</option>
                 <option>Carnivor</option>
             </select>
-            <div id="btn">Compare Me!</div>
+            <div id="btn" onclick="Compare()">Compare Me!</div>
+            <script>function Compare() {}</script>
+
         </div>
     </form>
     <!-- .grid to attach tiles to -->
